<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/Leads"
            android:icon="@drawable/ic_home"
            android:title="Leads" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />
        <!--        <item-->
        <!--            android:id="@+id/nav_support"-->
        <!--            android:icon="@drawable/ic_nav_support"-->
        <!--            android:title="@string/nav_chat" />-->
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_nav_policy"
            android:title="@string/nav_terms" />
        <!--        <item-->
        <!--            android:id="@+id/nav_contact"-->
        <!--            android:icon="@drawable/ic_location_on_black_24dp"-->
        <!--            android:visible="false"-->
        <!--            android:title="@string/nav_contact" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_review"-->
        <!--            android:icon="@drawable/ic_nav_review"-->
        <!--            android:title="@string/nav_review" />-->
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_nav_share"
            android:title="Realtors" />



        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />

        <!--        <item-->
        <!--            android:id="@+id/nav_powerd"-->
        <!--            android:icon="@drawable/copy"-->
        <!--            android:title="@string/status_stop" />-->

        <item
            android:id="@+id/nav_powerd"
            android:icon="@drawable/copy"
            android:title="Invite Realtors" />

        <item
            android:id="@+id/info"
            android:icon="@drawable/copy"
            android:title="Info" />
       <item
            android:id="@+id/help"
            android:icon="@drawable/copy"
            android:title="Help &amp; Support" />
      <item
            android:id="@+id/rate"
            android:icon="@drawable/copy"
            android:title="Rate this App" />

    </group>
</menu>
